--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,16 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="app_padding_left">16dp</dimen>
+    <dimen name="app_padding_right">16dp</dimen>
+    <dimen name="app_actionbar_height">48dp</dimen>
+    <dimen name="app_input_height">40dp</dimen>
+
     <dimen name="app_bar_height">180dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+
+    <!-- 文字 -->
+    <dimen name="title">18sp</dimen>
+    <dimen name="content">14sp</dimen>
+
 </resources>
