--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,13 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="TextView_Title">
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">@dimen/title</item>
+    </style>
+
+    <style name="TextView_content">
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">@dimen/content</item>
+    </style>
 </resources>
