[add] 添加地图上的UI

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3d3b3b</color>
     <color name="colorPrimaryDark">#292727</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="bg_normal">#ffffff</color>
+    <color name="bg_press">#55000000</color>
 </resources>
