--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -23,17 +23,22 @@
             app:queryHint="@string/search"/>
     </android.support.v7.widget.CardView>
 
-    <ImageView
-        android:id="@+id/imgMyLocation"
+    <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|left"
         android:layout_marginLeft="@dimen/app_padding_left"
-        android:layout_marginBottom="@dimen/app_padding_left"
-        android:padding="8dp"
-        android:contentDescription="定位"
-        android:background="@drawable/bg_circle"
-        android:src="@mipmap/ic_my_location_black_24dp"/>
+        android:layout_marginBottom="24dp">
+
+        <ImageView
+            android:id="@+id/imgMyLocation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:contentDescription="定位"
+            android:background="@drawable/bg_rect"
+            android:src="@mipmap/ic_my_location_black_24dp"/>
+    </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
