[add] 准备开始写Track列表

--- a/app/src/main/res/layout/fragment_track.xml
+++ b/app/src/main/res/layout/fragment_track.xml
@@ -5,9 +5,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
+    <android.support.v7.app.AlertController.RecycleListView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="轨迹"/>
+        android:layout_height="match_parent" />
 </LinearLayout>
