--- a/app/src/main/res/layout/item_track.xml
+++ b/app/src/main/res/layout/item_track.xml
@@ -1,18 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp">
-
-    <ImageView
-        android:id="@+id/imgTrackType"
-        android:layout_width="100dp"
-        android:layout_height="match_parent"
-        android:scaleType="centerInside"
-        android:src="@mipmap/ic_directions_run_black_24dp"/>
-    <TextView
-        android:id="@+id/tvTrackDescription"
+    android:layout_height="100dp"
+    android:layout_marginTop="6dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp"
+    android:layout_marginBottom="6dp">
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center_vertical"/>
-</LinearLayout>
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/imgTrackType"
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:scaleType="centerInside"
+            android:src="@mipmap/ic_directions_run_black_24dp"/>
+
+        <TextView
+            android:id="@+id/tvTrackDescription"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"/>
+        <ImageView
+            android:id="@+id/imgMore"
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:scaleType="centerInside"
+            android:src="@mipmap/ic_more_vert_black_24dp"/>
+    </LinearLayout>
+</android.support.v7.widget.CardView>
