--- a/app/src/main/res/layout/item_track.xml
+++ b/app/src/main/res/layout/item_track.xml
@@ -7,6 +7,7 @@
     android:layout_marginRight="8dp"
     android:layout_marginBottom="6dp">
     <LinearLayout
+        android:id="@+id/llContent"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
