--- a/app/src/main/res/layout/item_track.xml
+++ b/app/src/main/res/layout/item_track.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="120dp"
     android:layout_marginTop="6dp"
     android:layout_marginLeft="8dp"
     android:layout_marginRight="8dp"
@@ -19,12 +19,37 @@
             android:scaleType="centerInside"
             android:src="@mipmap/ic_directions_run_black_24dp"/>
 
-        <TextView
-            android:id="@+id/tvTrackDescription"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center_vertical"/>
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tvTrackTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:gravity="left"
+                style="@style/TextView_Title"
+                android:hint="标题"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:ellipsize="end"/>
+
+            <TextView
+                android:id="@+id/tvTrackDescription"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="8dp"
+                android:maxLines="4"
+                style="@style/TextView_content"
+                android:hint="请输入备注"
+                android:gravity="center_vertical"
+                android:ellipsize="end"/>
+
+        </LinearLayout>
         <ImageView
             android:id="@+id/imgMore"
             android:layout_width="50dp"
