--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -1,78 +1,80 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <com.amap.api.maps.MapView
         android:id="@+id/mapView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp">
+        android:orientation="vertical"
+        android:layout_gravity="top|right"
+        android:layout_marginTop="100dp"
+        android:layout_marginRight="@dimen/app_padding_left">
 
-        <android.support.v7.widget.SearchView
-            android:id="@+id/searchView"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/app_input_height"
-            android:layout_gravity="center"
-            app:queryHint="@string/search"/>
-    </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp">
+            <ImageView
+                android:id="@+id/imgLayers"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:layout_marginBottom="4dp"
+                android:background="@drawable/bg_rect"
+                android:src="@mipmap/ic_layers_black_24dp"/>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp">
+
+            <ImageView
+                android:id="@+id/imgTrack"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:background="@drawable/bg_rect"
+                android:src="@mipmap/ic_directions_run_black_24dp"/>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp">
+
+            <ImageView
+                android:id="@+id/imgAddLocation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:scaleType="centerInside"
+                android:background="@drawable/bg_rect"
+                android:src="@mipmap/ic_add_location_black_24dp"/>
+
+        </android.support.v7.widget.CardView>
+
+    </LinearLayout>
 
     <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|left"
-        android:layout_marginLeft="@dimen/app_padding_left"
-        android:layout_marginBottom="24dp">
+        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="36dp">
 
         <ImageView
             android:id="@+id/imgMyLocation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="8dp"
-            android:contentDescription="定位"
             android:background="@drawable/bg_rect"
             android:src="@mipmap/ic_my_location_black_24dp"/>
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top|right"
-        android:padding="4dp"
-        android:gravity="center"
-        android:layout_marginTop="100dp"
-        android:layout_marginRight="@dimen/app_padding_right">
-        <LinearLayout
-            android:layout_width="36dp"
-            android:layout_height="wrap_content"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/imgLayers"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/app_padding_left"
-                android:contentDescription="图层"
-                android:background="@drawable/bg_rect"
-                android:src="@mipmap/ic_layers_black_24dp"/>
-
-            <ImageView
-                android:id="@+id/imgTrack"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="轨迹"
-                android:background="@drawable/bg_rect"
-                android:src="@mipmap/ic_directions_run_black_24dp"/>
-        </LinearLayout>
     </android.support.v7.widget.CardView>
 
 </FrameLayout>
