--- a/app/src/main/res/layout/activity_poi_preview.xml
+++ b/app/src/main/res/layout/activity_poi_preview.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.bottle.track.map.track.TrackPreviewActivity">
+    tools:context="com.bottle.track.map.poi.PoiPreviewActivity">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
