--- a/app/src/main/res/layout/activity_poi_search.xml
+++ b/app/src/main/res/layout/activity_poi_search.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.bottle.track.home.search.PoiSearchActivity">
+    tools:context="com.bottle.track.map.poi.PoiSearchActivity">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -34,7 +34,8 @@
                 android:gravity="center"
                 style="@style/TextView_content"
                 android:background="@drawable/bg_rect"
-                android:text="@string/search"/>
+                android:text="@string/search"
+                android:visibility="gone"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
