--- a/app/src/main/res/layout/activity_track_editor.xml
+++ b/app/src/main/res/layout/activity_track_editor.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.bottle.track.map.business.TrackEditorActivity">
+    tools:context="com.bottle.track.map.track.TrackEditorActivity">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
