--- a/app/src/main/res/layout/item_poi.xml
+++ b/app/src/main/res/layout/item_poi.xml
@@ -16,8 +16,7 @@
             android:id="@+id/imgPoiType"
             android:layout_width="50dp"
             android:layout_height="match_parent"
-            android:scaleType="centerInside"
-            android:src="@mipmap/ic_place_black_36dp"/>
+            android:scaleType="centerInside"/>
 
         <LinearLayout
             android:layout_width="0dp"
