--- a/app/src/main/res/layout/activity_poi_preview.xml
+++ b/app/src/main/res/layout/activity_poi_preview.xml
@@ -13,9 +13,22 @@
         <include layout="@layout/title_layout" />
     </android.support.v7.widget.CardView>
 
-    <com.amap.api.maps.MapView
-        android:id="@+id/mapView"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
 
+        <com.amap.api.maps.MapView
+            android:id="@+id/mapView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewPager"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="30dp"
+            android:layout_gravity="bottom"
+            android:clipChildren="false"/>
+    </FrameLayout>
 </LinearLayout>
