--- a/app/src/main/res/layout/adapter_poi.xml
+++ b/app/src/main/res/layout/adapter_poi.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="90dp"
-    android:layout_marginTop="6dp"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp"
-    android:layout_marginBottom="6dp">
+    android:layout_height="100dp"
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp">
     <LinearLayout
         android:id="@+id/llContent"
         android:orientation="horizontal"
@@ -38,7 +36,7 @@
 
         </LinearLayout>
         <ImageView
-            android:id="@+id/imgMore"
+            android:id="@+id/imgCollect"
             android:layout_width="50dp"
             android:layout_height="match_parent"
             android:scaleType="centerInside"
