--- a/app/src/main/res/layout/item_poi_2.xml
+++ b/app/src/main/res/layout/item_poi_2.xml
@@ -5,7 +5,9 @@
     android:layout_marginTop="6dp"
     android:layout_marginLeft="8dp"
     android:layout_marginRight="8dp"
-    android:layout_marginBottom="6dp">
+    android:layout_marginBottom="6dp"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:id="@+id/cvContent">
     <LinearLayout
         android:id="@+id/llContent"
         android:orientation="horizontal"
